[gd_scene load_steps=2 format=3 uid="uid://gc6pbdkdi7xt"]

[ext_resource type="Script" uid="uid://bi2wuwmxb7hqd" path="res://load_threaded.gd" id="1_5o27a"]

[node name="LoadThreaded" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5o27a")

[node name="Paintings" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Babel" type="TextureRect" parent="Paintings"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="LasMeninas" type="TextureRect" parent="Paintings"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="MonaLisa" type="TextureRect" parent="Paintings"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="OldGuitarist" type="TextureRect" parent="Paintings"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Parasol" type="TextureRect" parent="Paintings"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Swing" type="TextureRect" parent="Paintings"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="StartLoading" type="Button" parent="."]
layout_mode = 2
text = "Start Loading"

[node name="GetLoaded" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Babel" type="Button" parent="GetLoaded"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "The Tower of Babel"

[node name="LasMeninas" type="Button" parent="GetLoaded"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Las Meninas"

[node name="MonaLisa" type="Button" parent="GetLoaded"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Mona Lisa"

[node name="OldGuitarist" type="Button" parent="GetLoaded"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "The Old Guitarist"

[node name="Parasol" type="Button" parent="GetLoaded"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Woman with a Parasol â€“ Madame Monet and Her Son"

[node name="Swing" type="Button" parent="GetLoaded"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "The Swing"

[connection signal="pressed" from="StartLoading" to="." method="_on_start_loading_pressed"]
[connection signal="pressed" from="GetLoaded/Babel" to="." method="_on_babel_pressed"]
[connection signal="pressed" from="GetLoaded/LasMeninas" to="." method="_on_las_meninas_pressed"]
[connection signal="pressed" from="GetLoaded/MonaLisa" to="." method="_on_mona_lisa_pressed"]
[connection signal="pressed" from="GetLoaded/OldGuitarist" to="." method="_on_old_guitarist_pressed"]
[connection signal="pressed" from="GetLoaded/Parasol" to="." method="_on_parasol_pressed"]
[connection signal="pressed" from="GetLoaded/Swing" to="." method="_on_swing_pressed"]
